--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +6,101 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://www.insidehook.com/wp-content/uploads/2019/03/GetLost_Header_1506971858.jpg?fit=1800%2C945");
+  background-repeat: no-repeat;
+  /* background-position: center; */
+  background-size: cover;
 }
-
+html, body{
+  height: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.dark{
+  
+  width: 100%;
+  height: 100%;
+}
+
+[type="date"] {
+  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+}
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+  width:40%
+
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+input {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 13px 15px;
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+  width: 20%;
+  font-size: 20px;
+  margin-left: 6%;
+
+}
+
+.special-font{
+  font-family: 'Dancing Script';
+  color:white;
+  font-weight: 900;
+  font-size: 100px;
+  padding:100px;
+  justify-content: center;
+
+}
+.expedia{
+  background-color: black;
+  padding-left:2%;
+}
+.traveller{
+  /* margin-top:3%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* padding:20px; */
+}
+.traveller2{
+  margin-top:3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* padding:20px; */
+}
+
+.budget{
+  margin-top:3%;
+  margin-left: 6%;
+  width:15%;
+  padding:10px;
+  font-size:20px;
+}
+
+.date_inp{
+ color:white;
+ margin-left: 6%;
+}
+.getItenary{
+  display:flex;
+  
+  align-items: flex-end;
+}
+
+.catchme{
+  margin-left:50%;
+  border-radius: 25px;
+  background-color: #B0C4DE;
+  font-weight:800;
+}
+
+.catchme:hover{
+  background-color: #E6E6FA;
 }
